--- a/config/application.yml
+++ b/config/application.yml
@@ -1,5 +1,5 @@
 community_name: MileHighMeet
-community_tagline: "Say Hi - In The Sky!"
+community_tagline: "Say Hi - in the Sky!"
 community_description:  "The Best Place for People Who Love Communities"
 support_email:  "support@milehighmeet.com"
 meta_description: 'A description of your community for use in META tags.'
