--- a/config/application.yml
+++ b/config/application.yml
@@ -1,7 +1,7 @@
 community_name: MileHighMeet
 community_tagline: "Say Hi - in the Sky!"
 community_description:  "The Best Place for People Who Love Communities"
-support_email:  "support@milehighmeet.com"
+support_email:  "sathya@realedgedata.com"
 meta_description: 'A description of your community for use in META tags.'
 meta_keywords: 'keywords for use in META tags'
 sections_enabled: ['photos', 'posts', 'clippings', 'contests', 'categories', 'events']
