Adding a new s3 bucket for this site.

--- a/config/amazon_s3.yml
+++ b/config/amazon_s3.yml
@@ -9,6 +9,6 @@ test:
   secret_access_key:
 
 production:
-  bucket_name: milehighmeet-prod
+  bucket_name: fedupwiththismovie-prod
   access_key_id: AKIAITWEH37ILBPNEQAA
   secret_access_key: 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
