--- a/config/application.yml
+++ b/config/application.yml
@@ -1,9 +1,9 @@
-community_name: MileHighMeet
-community_tagline: "Say Hi - in the Sky!"
-community_description:  "The Best Place for People Who Love Communities"
+community_name: Fed Up With This Movie
+community_tagline: "How could you love this?!"
+community_description:  "Where would be be without bad movies? From Godzilla to The Musketeer, bad movies constantly have us loving to hate them."
 support_email:  "sathya@realedgedata.com"
-meta_description: 'A description of your community for use in META tags.'
-meta_keywords: 'keywords for use in META tags'
+meta_description: 'Bad movies are the best. Join us in the pursuit of the best bad movies ever made.'
+meta_keywords: 'bad movie the room troll 2 etc'
 sections_enabled: ['photos', 'posts', 'clippings', 'contests', 'categories', 'events']
 closed_beta_mode: false
 
