Fixing some minor issues.

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,6 @@
 community_name: Fed Up With This Movie
 community_tagline: "How could you love this?!"
-community_description:  "Where would be be without bad movies? From Godzilla to The Musketeer, bad movies constantly have us loving to hate them."
+community_description:  "Where would we be without bad movies? From Godzilla to The Musketeer, bad movies constantly have us loving to hate them."
 support_email:  "sathya@realedgedata.com"
 meta_description: 'Bad movies are the best. Join us in the pursuit of the best bad movies ever made.'
 meta_keywords: 'bad movie the room troll 2 etc'
