Adding a nicer looking theme, must change the header image soon, because it's plagarism.

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,3 +1,5 @@
+theme: dappled
+
 community_name: Fed Up With This Movie
 community_tagline: "How could you love this?!"
 community_description:  "Where would we be without bad movies? From Godzilla to The Musketeer, bad movies constantly have us loving to hate them."
